src/_includes/css/custom.css
/* ... */
/* BASIC PAGE STYLES */

*,
*::before,
*::after {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  box-sizing: border-box;
  scroll-behavior: smooth;
  text-size-adjust: none;
}

::selection,
::-moz-selection {
  color: var(--selectionText);
  background: var(--selectionBg);
}

html, body {
  height: 100%;
}

html {
  font-family: var(--font-sans);
  line-height: 1.15;
  scroll-padding-top: 1rem;

  &:has(.navTop.sticky) {
    scroll-padding-top: 5rem;
  }
}

body {
  background: linear-gradient(to right, transparent, var(--bg), transparent), var(--bg-noise) repeat, var(--bg);
  background-attachment: fixed;
  color: var(--text);
  display: flex;
  flex-direction: column;
  font-family: var(--font-sans);
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: -.5px;
  line-height: 1.5;
  margin: 0;
  text-align: left;
  scrollbar-gutter: stable;

  &:has(.navTop.sticky) {
    padding-top: calc(65px + 2rem);
  }
}

@media(min-width:1200px) {
  body {
    background: radial-gradient(circle, var(--bg) 50%, transparent), var(--bg-noise) repeat, var(--bg);
    background-attachment: fixed;
  }
}

h1, h2, h3, h4, h5, h6 {
  color: var(--textHeading);
  font-family: var(--font-heading);
  font-weight: 700;
  letter-spacing: normal;
  margin-bottom: .5rem;
}

h1, .h1 { font-size: 2rem; }
h2, .h2 { font-size: 1.75rem; }
h3, .h3 { font-size: 1.5rem; }
h4, .h4 { font-size: 1.25rem; }
h5, .h5 { font-size: 1.15rem; }
h6, .h6 { font-size: 1rem; }

.text-base {
  font-size: 1rem;
  font-weight: normal;
  letter-spacing: normal;
}

ol, ul, p, pre, code, kbd, samp {
  margin-bottom: 1rem;
}

a, a:active {
  color: var(--prim);
  font-weight: 700;
  text-decoration: underline;
  transition: color .35s ease-in-out, text-decoration .35s ease-in-out;
}

a[href^="https://"].ext,
:is(.like) a[href^="https://"] {
  /* display: inline-block; */

  &::after {
    --size: .875em;

    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%235E81AC' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none' /%3E%3Cpath d='M12 6h-6a2 2 0 0 0 -2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-6' /%3E%3Cpath d='M11 13l9 -9' /%3E%3Cpath d='M15 4h5v5' /%3E%3C/svg%3E");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
    color: var(--text);
    content: '';
    display: inline-block;
    height: var(--size);
    /* line-height: var(--size); */
    margin-left: 2px;
    padding-right: var(--size);
    /* width: var(--size); */
  }
}

a:hover, a:focus-visible {
  color: var(--prim);
  text-decoration: none;
}

pre, code, kbd, samp {
  font-family: var(--font-mono);
  font-size: .875rem;
  letter-spacing: 0;
}

pre {
  border-left: 4px solid var(--prim);
  overflow-x: auto;
  /* padding: 1rem; */
}

p code, li code {
  background-color: var(--codeBg);
  border-radius: .125rem;
  padding: .125rem .25rem;
}

code {
  word-break: break-word;
}

em,
.italic {
  font-style: italic;
  color: var(--highlight);
}

b,
strong {
  color: var(--textHeading);
  font-weight: 700;
}

blockquote {
  /* background-color: var(--quoteBg); */
  border-left: 4px solid var(--prim);
  color: var(--textQuote);
  font-family: var(--font-sans);
  font-size: 1.125rem;
  font-style: italic;
  line-height: 1.375;
  margin-bottom: 1rem;
  padding: 2rem 1.5rem 1rem 2.5rem;
  position: relative;

  &::before {
    color: var(--sec);
    content: '\201C';
    font-family: Arial;
    font-size: 4em;
    left: 12px;
    position: absolute;
    top: -8px;
  }

  p {
    margin: 0;
  }

  & small::before {
    content: '― ';
  }

  & a,
  & small {
    font-style: normal;
  }

  & code {
    background-color: var(--codeBg);
    font-size: inherit;
  }
}

hr {
  border-style: none;
  border-top: 1px solid var(--border);
  margin: 1rem 0;
}

.hr {
  background: linear-gradient(90deg, var(--bg), var(--hr), var(--bg));
  height: 1px;
  margin: 1rem 0;
}

ul {
  padding-inline-start: 2rem;
}

ol {
  list-style: decimal;
  padding-inline-start: 3rem;
}

ul {
  list-style-type: square;
}

li > ol,
li > ul {
  margin-bottom: 0;
}

.list-inline {
  list-style: none;
  padding-left: 0;
}

.list-inline-item {
  display: inline-block;
}

img {
  border-style: none;
  display: block;
}

.img-fluid {
  height: auto;
  max-width: 100%;
}

button {
  background-color: transparent;
  border: 0;
  font-family: var(--font-heading);
  font-size: 1rem;
  letter-spacing: normal;
  padding: 0;

  &:disabled {
    cursor: not-allowed;
    pointer-events: none;
  }

  & svg,
  & .icon {
    pointer-events: none;
  }
}

main {
  flex: 1 0 auto;
}

/* CONTAINER */

.container {
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  padding: 0 1.5rem;
}

@media(min-width:768px) {
  .container {
    max-width: 80ch;
    padding: 0 2rem;
  }

  blockquote {
    font-size: 1.25rem;
    margin-left: 1rem;
    margin-right: 1rem;
    padding-bottom: 1.5rem;
    padding-left: 3rem;
    text-align: justify;
  }
}

@media(min-width:1280px) {
  .container {
    padding: 0;
  }

  .expand {
    margin: 0 -3rem;
  }

  .expand-xl {
    margin: 0 -5rem;
  }
}

@media(min-width:1900px) {
  .container {
    max-width: 90ch;
  }
}

/* NAV STYLES */

.navTop {
  border-bottom: 1px solid transparent;
  font-family: var(--font-heading);
  font-size: 1.15rem;
  margin-bottom: 2rem;

  &.sticky {
    --borderRadius: .0rem;

    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    background: var(--bg);
    background: linear-gradient(to bottom, color-mix(in srgb, var(--cardBg), transparent 75%), var(--bg));
    border-color: var(--border);
    border-radius: var(--borderRadius);
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 50;

    /* & .logo {
      border-radius: var(--borderRadius);
    } */
  }
}
/* ... */

